<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="app_slogan">Find a nice restaurant and invite your co-workers for lunch !</string>

    <string name="btn_facebook">Sign in with Facebook</string>
    <string name="btn_google">Sign in with Google</string>
    <string name="btn_email">Sign in with Email</string>
    <string name="btn_github">Sign in with Github</string>
    <string name="connection_failed">Connection failed</string>

    <string name="item_search">Search</string>

    <string name="item_your_lunch">YOUR LUNCH</string>
    <string name="item_settings">SETTINGS</string>
    <string name="item_log_out">LOGOUT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_application_id">2071544302892177</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb2071544302892177</string>

    <string name="popup_message_confirmation_deconnection">Do you want to disconnect ?</string>
    <string name="popup_message_choice_yes">Yes</string>
    <string name="popup_message_choice_no">No</string>

    <string name="authentification_canceled">Authentification canceled</string>
    <string name="no_network_connection">No network Connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="no_restaurant_selected">No restaurant selected</string>

    <string name="notification_is_enabled">Notification is enabled and will send at 12am.</string>
    <string name="notification_is_disabled">Notification is disabled.</string>
    <string name="title_activity_maps">Map</string>

    <string name="current_place">Current Place</string>
    <string name="no_user">No user found</string>

    <string name="channel_name">Message from Firebase</string>
    <string name="content_notification">You will lunch at %1$s with : </string>
    <string name="content_title_notification">You receive a new notification from Go4Lunch</string>

    <string name="default_openinghours_text">Cannot access to opening hours</string>
    <string name="restaurant_always_open">Open 24/7</string>
    <string name="restaurant_open_until">Open until %1$s</string>
    <string name="restaurant_open_at">Open at %1$s</string>
    <string name="restaurant_close">Close</string>

    <string name="user_joinin">%1$s is joining !</string>

    <string name="user_choose_one_restaurant">%1$s will eat at "%2$s"</string>
    <string name="user_going_nowhere">%1$s hasn\'t decided yet</string>
</resources>
