<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/family_dinner"
    android:id="@+id/main_activity_coordinator_layout"
    tools:context=".Controller.Activities.AuthentificationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/family_dinner"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <ImageView
            android:layout_width="@dimen/icn_auth_act_width"
            android:layout_height="@dimen/icn_auth_act_height"
            android:layout_marginTop="@dimen/icn_auth_act_margin_top"
            android:src="@drawable/icn_go_4_lunch"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/title_auth_act_size"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_slogan"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/slogan_auth_act_margin_bottom"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_email"
                android:background="@drawable/auth_email_btn"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:id="@+id/activity_auth_btn_email"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_google"
                android:background="@drawable/auth_google_btn"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:id="@+id/activity_auth_btn_google"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_facebook"
                android:background="@drawable/auth_facebook_btn"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:id="@+id/activity_auth_btn_facebook"/>

        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>